--- a/register-service/pom.xml
+++ b/register-service/pom.xml
@@ -30,6 +30,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.springframework.data</groupId> -->
+		<!-- <artifactId>spring-data-jpa</artifactId> -->
+		<!-- </dependency> -->
+		<dependency>
+			<groupId>org.socialsignin</groupId>
+			<artifactId>spring-data-dynamodb</artifactId>
+			<version>1.0.2.RELEASE</version>
+		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
