DynamoDB connection correction.

--- a/register-service/src/main/resources/application.properties
+++ b/register-service/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 amazon.dynamodb.endpoint=dynamodb.us-east-1.amazonaws.com
-amazon.aws.accesskey=AKIAJV5CFT4CD6E7EMHQ
-amazon.aws.secretkey=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
+amazon.aws.accesskey=setMe
+amazon.aws.secretkey=setMe
+
+everis.aws.notifications.useProxy=true
+everis.aws.notifications.proxyHost=10.110.8.42
+everis.aws.notifications.proxyPort=8080
+everis.aws.notifications.username=setMe
+everis.aws.notifications.password=setMe
