--- a/register-service/pom.xml
+++ b/register-service/pom.xml
@@ -12,7 +12,7 @@
 
 	<artifactId>register-service</artifactId>
 	<properties>
-		<start-class>register.Application</start-class>
+		<start-class>com.everis.aws.notifications.RegisterApplication</start-class>
 	</properties>
 
 	<packaging>jar</packaging>
