--- a/register-service/src/main/resources/application.properties
+++ b/register-service/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 amazon.dynamodb.endpoint=dynamodb.us-east-1.amazonaws.com
-amazon.aws.accesskey=setMe
-amazon.aws.secretkey=setMe
+amazon.aws.accesskey=
+amazon.aws.secretkey=
 
-everis.aws.notifications.useProxy=true
+everis.aws.notifications.topicForPushes=arn:aws:sns:us-east-1:721597765533:PUSH_TO_DEVICE
+everis.aws.notifications.androidApplication=arn:aws:sns:us-east-1:721597765533:app/GCM/ANDROID_SAMPLE_APPL
+
+everis.aws.notifications.useProxiedDevEnvironment=true
 everis.aws.notifications.proxyHost=10.110.8.42
 everis.aws.notifications.proxyPort=8080
-everis.aws.notifications.username=setMe
-everis.aws.notifications.password=setMe
+everis.aws.notifications.username=
+everis.aws.notifications.password=
