--- a/register-service/src/main/resources/application.properties
+++ b/register-service/src/main/resources/application.properties
@@ -5,8 +5,10 @@ amazon.aws.secretkey=
 everis.aws.notifications.topicForPushes=arn:aws:sns:us-east-1:721597765533:PUSH_TO_DEVICE
 everis.aws.notifications.androidApplication=arn:aws:sns:us-east-1:721597765533:app/GCM/ANDROID_SAMPLE_APPL
 
-everis.aws.notifications.useProxiedDevEnvironment=true
-everis.aws.notifications.proxyHost=10.110.8.42
-everis.aws.notifications.proxyPort=8080
+everis.aws.notifications.useProxiedDevEnvironment=false
+everis.aws.notifications.proxyHost=
+everis.aws.notifications.proxyPort=
 everis.aws.notifications.username=
 everis.aws.notifications.password=
+
+eureka.instance.preferIpAddress=true
