--- a/push-service/src/main/resources/application.yml
+++ b/push-service/src/main/resources/application.yml
@@ -1,18 +1,18 @@
 
 server:
-  port: ${vcap.application.port:0}
+  port: 8050
 
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${vcap.services.eureka-service.credentials.uri:http://127.0.0.1:8761}/eureka/
+      defaultZone: ${vcap.services.eureka-service.credentials.uri:http://52.203.147.52:8761}/eureka/
 
 ---
 spring:
   profiles: cloud
 eureka:
   instance:
-    hostname: ${APPLICATION_DOMAIN}
-    nonSecurePort: 80
+    hostname: 52.203.147.52
+    nonSecurePort: 8050
     
