--- a/register-service/src/main/resources/application.yml
+++ b/register-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 
 server:
-  port: ${vcap.application.port:0}
+  port: 9098
 
 spring:
   jpa:
@@ -10,12 +10,12 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${vcap.services.eureka-service.credentials.uri:http://127.0.0.1:8761}/eureka/
+      defaultZone: ${vcap.services.eureka-service.credentials.uri:http://52.203.147.52:8761}/eureka/
 
 ---
 spring:
   profiles: cloud
 eureka:
   instance:
-    hostname: ${APPLICATION_DOMAIN}
-    nonSecurePort: 80
+    hostname: 52.203.147.52
+    nonSecurePort: 9098
